# ComfyUI-dotWaveform

./: README.md  __init__.py  dot_waveform_node.py  pyproject.toml  requirements.txt
example_workflows/: dotWaveform_example_workflow.json
workflow_examples/: dotWaveform+VibevoiceTTS_advanced_example_workflow.json  dotWaveform_simple_example_workflow.json
