[project]
name = "ComfyUI-dotWaveform"
description = "ComfyUI node for generating animated dotted waveform visualizations with multiple animation styles including teardrop bars"
version = "1.0.1"
license = {file = "LICENSE"}
dependencies = ["torch>=1.13.0", "torchaudio>=0.13.0", "numpy>=1.21.0", "Pillow>=9.0.0", "librosa>=0.9.0"]

[project.urls]
Repository = "https://github.com/Saganaki22/ComfyUI-dotWaveform"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "dotWaveform"
DisplayName = "ComfyUI-dotWaveform"
Icon = "https://avatars.githubusercontent.com/u/84208527"
